<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@drawable/background"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="horizontal">

        <include layout="@layout/header" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView48"
            style="@style/general_light_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/billing_title"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="fill_parent"
            android:layout_height="0dp"

            android:layout_marginTop="10dp"
            android:layout_weight="7"
            android:fillViewport="true"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/scrollview_marginleft"
                android:paddingRight="@dimen/scrollview_marginright">

                <EditText
                    android:id="@+id/bill_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_top"
                    android:hint="@string/name" />

                <EditText
                    android:id="@+id/bill_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_top"
                    android:hint="@string/address" />

                <EditText
                    android:id="@+id/bill_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_top"
                    android:hint="@string/city" />

                <Spinner
                    android:id="@+id/select_bill_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/layout_margin_top"
                    android:entries="@array/registeration_cities" />


                <EditText
                    android:id="@+id/bill_zip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_top"
                    android:hint="@string/zip" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="@dimen/layout_margin_top"
                    android:gravity="center_horizontal|top"
                    android:orientation="horizontal">


                    <Button
                        android:id="@+id/continu"
                        style="@style/buy_funcrad_buttonstyle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="contnue"
                        android:text="@string/continu" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <include layout="@layout/footer" />
    </LinearLayout>

</LinearLayout>
