<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@drawable/background"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="horizontal">
        <include layout="@layout/header"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3.1" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight=".6"
            android:gravity="center"
            android:background="@drawable/green_back"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:text="@string/pick_city"
                style="@style/main_page"
                android:id="@+id/textView19" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/price"
                style="@style/main_page"
                android:id="@+id/textView20" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/offers"
                style="@style/main_page"
                android:id="@+id/textView21" />
        </LinearLayout>

        <ListView
            android:id="@+id/cities"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="5.2" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:id="@+id/network_error"
            android:onClick="refreshList"
            android:visibility="gone"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                style="@style/general_light_text"
                android:text="@string/network_error_for_list"
                android:id="@+id/textView25" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <include layout="@layout/footer" />
    </LinearLayout>

</LinearLayout>
