<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@drawable/background"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.4"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:background="@drawable/transparent"
            android:orientation="vertical">


            <LinearLayout
                style="@style/registration_linearLayout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz "
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />


            </LinearLayout>

            <LinearLayout
                style="@style/registration_linearLayout_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:fontFamily="sans-serif"
                    android:ems="10"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz "
                    android:hint="@string/last"
                    android:inputType="textPersonName"  />


            </LinearLayout>

            <LinearLayout
                style="@style/registration_linearLayout_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:ems="10"
                    android:hint="@string/email1"
                    android:fontFamily="sans-serif"
                    android:inputType="textEmailAddress" />


            </LinearLayout>

            <LinearLayout
                style="@style/registration_linearLayout_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/zip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:fontFamily="sans-serif"
                    android:hint="@string/zip"
                    android:ems="10"
                    android:inputType="number" />


            </LinearLayout>


            <LinearLayout
                style="@style/registration_linearLayout_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:fontFamily="sans-serif"
                    android:hint="Create Password"
                    android:ems="10"
                    android:inputType="textPassword" />


            </LinearLayout>

            <LinearLayout
                style="@style/registration_linearLayout_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/re_enterpass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:fontFamily="sans-serif"
                    android:ems="10"
                    android:hint="@string/retype_pass"
                    android:inputType="textPassword" />


            </LinearLayout>

            <LinearLayout
                style="@style/registration_linearLayout_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView13"
                    style="@style/text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:clickable="true"
                    android:textColor="#577cd1"
                    android:onClick="openPolicies"
                    android:text="Read Policies"
                    android:textStyle="italic" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"

                    android:text="@string/term_condition" />


            </LinearLayout>

            <LinearLayout
                style="@style/registration_linearLayout_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView14"
                    style="@style/text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button7"
                        style="@style/landing_button_green"
                        android:layout_marginBottom="50dp"
                        android:layout_marginLeft="0dp"
                        android:onClick="onRegistration"
                        android:text="@string/button1" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            style="@style/text_style2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textSize="10sp" />
    </LinearLayout>

</LinearLayout>
