<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="3"
    android:background="@drawable/background"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/fun_top"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/fun_center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <Button
                android:id="@+id/button4"
                style="@style/landing_button_green"
                android:onClick="signIn"
                android:text="@string/button2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button5"
                style="@style/landing_button_green"
                android:onClick="register"
                android:text="@string/button1"  />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button6"
                android:layout_width="@dimen/landing_button_width_yellow"
                android:layout_height="@dimen/landing_button_height"
                android:layout_marginLeft="@dimen/landing_left_margin_yellowbutton"
                android:background="@drawable/yellow_button"
                android:textSize="@dimen/landing_yellow_button_text"
                android:onClick="tutorial"
                android:text="@string/yellow_button_text" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/fun_bottom"
        android:orientation="vertical">

    </LinearLayout>

</LinearLayout>
