<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@drawable/background"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="horizontal">

        <include layout="@layout/header" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="#D2D0D2"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".6"
            style="@style/main_page"
            android:clickable="true"
            android:onClick="goToStorePage"
            android:gravity="center_horizontal|top"
            android:background="@drawable/greenwitharrow" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight=".6"
            android:layout_height="0dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight=".6"
                android:layout_height="match_parent"
                android:text="@string/offerhead_text1"
                style="@style/store_offer_head_text"
                android:background="@drawable/offershead1"
                android:id="@+id/textView30" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight=".2"
                android:background="@drawable/offershead2"
                style="@style/store_offer_head_text"
                android:text="@string/offerhead_text2"
                android:layout_height="match_parent"
                android:id="@+id/textView31" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight=".2"
                android:background="@drawable/offershead1"
                style="@style/store_offer_head_text"
                android:text="@string/offerhead_text3"
                android:layout_height="match_parent"
                android:id="@+id/textView32" />
        </LinearLayout>

        <ListView
            android:id="@+id/store_product_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="5.6" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight="5.6"
            android:gravity="center"
            android:onClick="reload"
            android:visibility="gone"
            android:background="@drawable/reload_button"
            android:id="@+id/store_products_layout_error"
            android:layout_height="0dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:src="@drawable/ic_action_refresh"  />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/network_cat_error"
                android:text="@string/network_error_for_list"
                style="@style/general_light_text" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <include layout="@layout/footer" />
    </LinearLayout>

</LinearLayout>